# swagger.json
@@ -11,7 +11,7 @@
     "http"
   ],
   "paths": {
-    "/users/": {
+    "/user/": {
       "get": {
         "description": "",
         "responses": {
@@ -29,7 +29,7 @@
         }
       }
     },
-    "/users/{id}": {
+    "/user/{id}": {
       "get": {
         "description": "",
         "parameters": [
